logs/exceptions.log

2024-10-13T18:25:48.357Z [exception or rejection] error: uncaughtException: (no error message)
Error
    at Object.<anonymous> (D:\node\camp\app.js:20:7)
    at Module._compile (node:internal/modules/cjs/loader:1364:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49
 *******************************************************

2024-10-13T18:26:12.276Z [exception or rejection] error: uncaughtException: (no error message)
Error
    at Object.<anonymous> (D:\node\camp\app.js:20:7)
    at Module._compile (node:internal/modules/cjs/loader:1364:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49
 *******************************************************

2024-10-24T23:16:31.473Z [exception or rejection] error: uncaughtException: Unexpected token '{'
D:\node\camp\models\Otp.js:13
    { "expireAt": { type: Date,  expires: 11 } }
    ^

SyntaxError: Unexpected token '{'
    at internalCompileFunction (node:internal/vm:76:18)
    at wrapSafe (node:internal/modules/cjs/loader:1283:20)
    at Module._compile (node:internal/modules/cjs/loader:1328:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:177:18)
    at Object.<anonymous> (D:\node\camp\controllers\userController.js:4:13)
    at Module._compile (node:internal/modules/cjs/loader:1364:14)
 *******************************************************

2024-10-24T23:48:12.151Z [exception or rejection] error: uncaughtException: Identifier 'bcrypt' has already been declared
D:\node\camp\controllers\userController.js:6
const bcrypt = require('bcrypt');
      ^

SyntaxError: Identifier 'bcrypt' has already been declared
    at internalCompileFunction (node:internal/vm:76:18)
    at wrapSafe (node:internal/modules/cjs/loader:1283:20)
    at Module._compile (node:internal/modules/cjs/loader:1328:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:177:18)
    at Object.<anonymous> (D:\node\camp\routes\userRoutes.js:11:5)
    at Module._compile (node:internal/modules/cjs/loader:1364:14)
 *******************************************************

2024-10-30T03:35:08.919Z [exception or rejection] error: uncaughtException: err is not defined
ReferenceError: err is not defined
    at process.<anonymous> (D:\node\camp\app.js:74:17)
    at process.emit (node:events:529:35)
    at emit (node:internal/process/promises:149:20)
    at processPromiseRejections (node:internal/process/promises:283:27)
    at process.processTicksAndRejections (node:internal/process/task_queues:96:32)
 *******************************************************
